# recipe_game

./: Cargo.toml
assets/: dynamic_asset.assets.ron
assets/prefabs/: cannon_tower.glb  gun_tower.glb  mouse_a.glb
assets/scenes/: default_scene.glb
blender/prefabs/: player_a.blend  player_b.blend
blender/scenes/: default_scene.blend
examples/: multi_action.rs
src/: action.rs  asset_pipeline.rs  camera_controller.rs  character_controller.rs  enemy.rs  interaction.rs  inventory.rs  lib.rs  physics.rs  player.rs  tile.rs  tower.rs  ui.rs
src/character_controller/: animation.rs
src/enemy/: animation.rs  spawner.rs
src/player/: player_attack.rs  player_mark.rs
src/tower/: tower_attack.rs
src/ui/: widgets.rs  world_space.rs
src/ui/widgets/: button.rs
